# AutoMusicTheoryQA

./: .gitignore  Readme.md  pyproject.toml
data/: abc.jsonl
scripts/: evaluate.sh
src/: evaluate.py  vqa_evaluate.py
src/AutoMusicTheoryQA/: data_gen.py  main.py  prototype.py  utils.py  vqa_gen.py
src/AutoMusicTheoryQA.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/AutoMusicTheoryQA/chords/: __init__.py  chord_root_identification.py  chords_completion.py  chords_identification.py
src/AutoMusicTheoryQA/interval/: __init__.py  interval.py  interval2notes.py  notes2interval.py
src/AutoMusicTheoryQA/rhythm/: __init__.py  barline_placement.py  time_signature.py
src/AutoMusicTheoryQA/scale/: __init__.py  scale_identification.py  scale_selection.py
